@@ -6,13 +6,17 @@ import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.Operation;
 import io.swagger.v3.oas.models.PathItem;
 import io.swagger.v3.oas.models.parameters.Parameter;
-
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Collection;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.openapitools.codegen.languages.JavaClientCodegen;
 
 public class JavaOpenBankingCodegen extends JavaClientCodegen {
-  private final static List<String> EXCLUDED_PARAMS = List.of("Signature", "Digest", "Date");
-  private final static List<String> NON_REQUIRED_PARAMS = List.of("Authorization", "X-JWS-Signature");
+  private static final List<String> EXCLUDED_PARAMS = Arrays.asList("Signature", "Digest", "Date");
+  private static final List<String> NON_REQUIRED_PARAMS = Arrays.asList("Authorization", "X-JWS-Signature");
 
   @Override
   public String getName() {
@@ -26,30 +30,23 @@ public class JavaOpenBankingCodegen extends JavaClientCodegen {
 
   @Override
   public void preprocessOpenAPI(OpenAPI openAPI) {
-    Optional.ofNullable(openAPI)
-            .stream()
+    Stream.ofNullable(openAPI)
             .map(OpenAPI::getPaths)
-            .map(Map::values)
-            .flatMap(Collection::stream)
-            .map(PathItem::readOperations)
-            .flatMap(Collection::stream)
-            .forEach(JavaOpenBankingCodegen::updateOperationParameters);
+            .map(Map::values).flatMap(Collection::stream)            .map(PathItem::readOperations).flatMap(Collection::stream)
+            .forEach(JavaOpenBankingCodegen::updateParameters);
     super.preprocessOpenAPI(openAPI);
   }
 
-  private static void updateOperationParameters(Operation operation) {
-    Optional.ofNullable(operation.getParameters())
-            .map(JavaOpenBankingCodegen::updateParameters)
-            .ifPresent(operation::setParameters);
-  }
-
-  private static List<Parameter> updateParameters(List<Parameter> input) {
-    List<Parameter> includedParams = input.stream()
-            .filter(not(p -> EXCLUDED_PARAMS.contains(p.getName())))
-            .toList();
+  private static void updateParameters(Operation operation) {
+    if(operation.getParameters()==null) {
+      return;
+    }
+    List<Parameter> includedParams = operation.getParameters().stream()
+        .filter(not(p -> EXCLUDED_PARAMS.contains(p.getName())))
+        .collect(Collectors.toUnmodifiableList());
     includedParams.stream()
-            .filter(p -> NON_REQUIRED_PARAMS.contains(p.getName()))
-            .forEach(p -> p.required(false));
-    return includedParams;
+        .filter(p -> NON_REQUIRED_PARAMS.contains(p.getName()))
+        .forEach(p -> p.required(false));
+    operation.setParameters(includedParams);
   }
 }
